[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Grapple.gd" type="Script" id=1]
[ext_resource path="res://Art/chain.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Grapple" type="Line2D"]
width = 8.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 2 )
texture_mode = 1
sharp_limit = 0.0
round_precision = 1
script = ExtResource( 1 )

[node name="HookCollider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="HookCollider"]
shape = SubResource( 1 )

[connection signal="area_entered" from="HookCollider" to="." method="_on_HookCollider_area_entered"]
[connection signal="body_entered" from="HookCollider" to="." method="_on_HookCollider_body_entered"]
